<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.v3_372.myapplication.MainActivity">

    <TextView
        android:id="@+id/txtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radGrpAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radBtnAgeRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radBtnAgeRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp" />


    <Spinner
        android:id="@+id/spnAge1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/age_list1"
        android:prompt="@string/spn_age_list_promt"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/spnAge2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/age_list2"
        android:prompt="@string/spn_age_list_promt"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/txthobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobby"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkboxmusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/music"/>

            <CheckBox
                android:id="@+id/chkboxsing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/sing"/>

            <CheckBox
                android:id="@+id/chkboxdance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/dance"/>

            <CheckBox
                android:id="@+id/chkboxtravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/travel"/>

            <CheckBox
                android:id="@+id/chkboxreadingg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/reading"/>

            <CheckBox
                android:id="@+id/chkboxwriting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/writing"/>

            <CheckBox
                android:id="@+id/chkboxclimbing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/climbing"/>

            <CheckBox
                android:id="@+id/chkboxswim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/swim"/>

            <CheckBox
                android:id="@+id/chkboxeating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/eating"/>
            <CheckBox
                android:id="@+id/chkboxdrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/drawing"/>

            <Button
                android:id="@+id/btnOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOK"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtHobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:textSize="18sp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>
